# Voice-Recorder

./: Features.md  README.md  build.gradle.kts  crash_logs.txt  detekt.yml  docs_stripped.txt  navdisplay_matches.txt  settings.gradle.kts
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/keepRules/: rules.keep
app/src/main/res/values/: strings.xml
app/src/main/res/xml/: data_extraction_rules.xml
build-logic/: build.gradle.kts
build-logic/src/main/kotlin/: AndroidConfig.kt  vr.android.application.gradle.kts  vr.android.compose.gradle.kts  vr.android.feature.gradle.kts  vr.android.koin.gradle.kts  vr.android.library.gradle.kts
core/common/: build.gradle.kts
core/database/: build.gradle.kts  consumer-rules.keep
core/database/src/main/keepRules/: rules.keep
core/datastore/: build.gradle.kts  consumer-rules.keep
core/designsystem/: build.gradle.kts  consumer-rules.keep
core/media/: .gitignore  build.gradle.kts  consumer-rules.keep
core/media/src/main/: AndroidManifest.xml
core/media/src/main/cpp/: CMakeLists.txt  LameEncoder.cpp  patch_lame.cmake
core/navigation/: build.gradle.kts  consumer-rules.keep
core/notifications/: build.gradle.kts  consumer-rules.keep
core/notifications/src/main/: AndroidManifest.xml
core/overlay/: build.gradle.kts  consumer-rules.keep
core/permissions/: build.gradle.kts
core/shortcuts/: build.gradle.kts
data/recordings/: build.gradle.kts  consumer-rules.keep
feature/recordings/: build.gradle.kts
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
(+135 files in other folders)
